--- a/templates/black-and-white.html
+++ b/templates/black-and-white.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hue</title>
+    <title>Black and White</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -20,35 +20,19 @@
     <form id="controls">
       <label for="source">Select input file:</label>
       <input type="file" name="source" accept="image/*" />
-      <label for="hueDelta">Hue adjustment:</label>
-      <input type="range" name="hueDelta" min="0" max="360" />
+      <label for="threshold">White threshold:</label>
+      <input type="range" name="threshold" min="0" max="255" />
     </form>
 
     <pre id="settings"></pre>
 
     <script type="module">
-      import convert from "https://esm.sh/color-convert";
       import { attach } from "https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/main.js";
 
+      // https://en.wikipedia.org/wiki/Binary_image
+
       function transform(imageData, controls) {
-        const { data } = imageData;
-
-        for (let i = 0; i < data.length; i += 4) {
-          let r = data[i];
-          let g = data[i + 1];
-          let b = data[i + 2];
-
-          let [h, s, l] = convert.rgb.hsl(r, g, b);
-
-          h += controls.hueDelta;
-          h %= 360;
-
-          [r, g, b] = convert.hsl.rgb(h, s, l);
-
-          data[i] = r;
-          data[i + 1] = g;
-          data[i + 2] = b;
-        }
+        // Your code goes here !!
       }
 
       attach(transform);
