--- a/templates/dither.html
+++ b/templates/dither.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grayscale</title>
+    <title>Dither</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -27,20 +27,18 @@
     <script type="module">
       import { attach } from "https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/main.js";
 
-      function transform(imageData, controls) {
-        const { data } = imageData;
+      // https://en.wikipedia.org/wiki/Ordered_dithering
+      // https://tannerhelland.com/2012/12/28/dithering-eleven-algorithms-source-code.html
 
-        for (let i = 0; i < data.length; i += 4) {
-          const r = data[i];
-          const g = data[i + 1];
-          const b = data[i + 2];
+      const bayer = [
+        [0, 8, 2, 10],
+        [12, 4, 14, 6],
+        [3, 11, 1, 9],
+        [15, 7, 13, 5],
+      ];
 
-          const lum = 0.2126 * r + 0.7152 * g + 0.0722 * b;
-
-          data[i] = lum;
-          data[i + 1] = lum;
-          data[i + 2] = lum;
-        }
+      function transform(imageData) {
+        // Your code goes here !!
       }
 
       attach(transform);
