--- a/templates/hue.html
+++ b/templates/hue.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Black and White</title>
+    <title>Hue</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -20,30 +20,21 @@
     <form id="controls">
       <label for="source">Select input file:</label>
       <input type="file" name="source" accept="image/*" />
-      <label for="threshold">White threshold:</label>
-      <input type="range" name="threshold" min="0" max="255" />
+      <label for="hueDelta">Hue adjustment:</label>
+      <input type="range" name="hueDelta" min="0" max="360" />
     </form>
 
     <pre id="settings"></pre>
 
     <script type="module">
+      import convert from "https://esm.sh/color-convert";
       import { attach } from "https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/main.js";
 
+      // https://en.wikipedia.org/wiki/HSL_and_HSV
+      // https://www.npmjs.com/package/color-convert
+
       function transform(imageData, controls) {
-        const { data } = imageData;
-
-        for (let i = 0; i < data.length; i += 4) {
-          const r = data[i];
-          const g = data[i + 1];
-          const b = data[i + 2];
-
-          const lum = 0.2126 * r + 0.7152 * g + 0.0722 * b;
-          const bw = lum >= controls.threshold ? 255 : 0;
-
-          data[i] = bw;
-          data[i + 1] = bw;
-          data[i + 2] = bw;
-        }
+        // Your code goes here !!
       }
 
       attach(transform);
